# potential-octo-bassoon

./: README.md  dockerfile  local.env  pyproject.toml  requirements.txt
app/: constants.py  dependencies.py  environment.py  main.py  secret_loader.py  secrets.py  test_main.py
app/api/: auth.py  healthcheck.py  shopify.py  utils.py
app/auth/: authentication.py  exceptions.py  utils.py
app/common/decorators/: retry_with_backoff_decorator.py
app/common/exceptions/: exceptions.py
app/common/logger/: log.py
app/common/monitoring/: sentry.py
app/common/utils/: common_functions.py  order_utils.py  validators.py
app/db/: merchant.py  order.py  otp.py  user.py
app/model/: merchant.py  shopify.py  user.py
app/model/auth/: requests.py  responses.py
app/services/: tracking_service.py
frontend/src/entities/: order-detail.entity.ts  order.entity.ts
frontend/src/pages/: order-detail.tsx  order-list.tsx
tests/: pytest.ini
tests/unit/: utils.py
tests/unit/common/decorators/: retry_with_backoff_decorator_test.py
tests/unit/services/: tracking_service_test.py
